cabal-version:   3.0
name:            block-buster
version:         0.1.0.0
license:
author:          MLabs
maintainer:      seungheon@mlabs.city
build-type:      Simple
extra-doc-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PackageImports
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies

library
  import:          lang
  hs-source-dirs:  src
  build-depends:
    , async
    , base                  >=4.9 && <5
    , cardano-api
    , cardano-ledger-byron
    , unagi-chan

  exposed-modules:
    BlockBuster.ChainSync
    BlockBuster.Producer

executable example
  import:         lang
  main-is:        Main.hs
  build-depends:
    , base          >=4.9 && <5
    , block-buster

  hs-source-dirs: example
  ghc-options:    -threaded -rtsopts
  other-modules:
